src/objects/Procedure_Catalog__c.object
<CustomObject>
    <description>The list of all the procedures in the system.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What Hospital, facility provides this Procedure.</description>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedure_Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Op_Instruction__c</fullName>
        <label>Post-Op Instruction</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Instruction__c</fullName>
        <label>Pre-Op Instruction</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <description>code to identify the procedure</description>
        <label>Procedure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Description__c</fullName>
        <description>Information about the procedure</description>
        <label>Procedure Description</label>
        <type>TextArea</type>
    </fields>
    <label>Procedure Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>